--- a/8bit/index.html
+++ b/8bit/index.html
@@ -117,10 +117,13 @@
 
   <pre id="outputJS"></pre>
 <h3>Chiptune Console</h3>
-<textarea id="chiptuneInput" rows="4" cols="60">E4:4 F4:4 G4:4 R:2 G4:2 A4:4
-B4:4 C5:4 D5:4 E5:8 R:4
-E5:4 F5:4 G5:4 R:2 G5:2 A5:4
-B5:4 C6:4 D6:4 E6:8 R:4</textarea><br>
+<textarea id="chiptuneInput" rows="4" cols="60">E4:4 D4:4 C4:4 D4:4
+E4:4 E4:4 E4:8
+D4:4 D4:4 D4:8
+E4:4 G4:4 G4:8
+E4:4 D4:4 C4:4 D4:4
+E4:4 E4:4 E4:4 E4:4
+D4:4 D4:4 E4:4 D4:4 C4:4</textarea><br>
 <button onclick="playChiptune()">Play Chiptune</button>
 <button onclick="stopChiptune()">Stop Chiptune</button>
   <script>
