--- a/8bit/index.html
+++ b/8bit/index.html
@@ -116,18 +116,19 @@
   </div>
 
   <pre id="outputJS"></pre>
-<h3>Chiptune Console</h3>
-<textarea id="chiptuneInput" rows="4" cols="60">E4:4 D4:4 C4:4 D4:4
-E4:4 E4:4 E4:8
-D4:4 D4:4 D4:8
-E4:4 G4:4 G4:8
-E4:4 D4:4 C4:4 D4:4
-E4:4 E4:4 E4:4 E4:4
-D4:4 D4:4 E4:4 D4:4 C4:4</textarea><br>
+<label for="waveformToggle">Waveform:</label>
+<select id="waveformToggle">
+  <option value="square">Square (classic)</option>
+  <option value="triangle" selected>Triangle (whimsical)</option>
+</select>
+<textarea id="chiptuneInput" rows="4" cols="60">C5:2 E5:2 G5:2 R:2 G5:2 A5:4
+F5:2 D5:2 C5:4 R:2 C5:2 G5:4
+E5:2 R:2 E5:2 G5:2 A5:4 R:4
+C6:2 B5:2 A5:2 G5:2 R:4</textarea><br>
 <button onclick="playChiptune()">Play Chiptune</button>
-<button onclick="stopChiptune()">Stop Chiptune</button>
+<label><input type="checkbox" id="loopChiptune"> Loop</label>
   <script>
-
+let beatTime = 0;
     const codeString = '';
     const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
     const stepsPerBar = 16;
@@ -428,9 +429,11 @@ function generatePlaybackJS(){
     }
 
 let chiptuneNotes = [];
+let originalChiptuneNotes = [];
 let chiptuneIndex = 0;
 let isChiptunePlaying = false;
 let chiptuneScheduler;
+let nextChiptuneTime = 0;
 
 function parseChiptuneInput(input) {
   return input.trim().split(/\s+/).map(token => {
@@ -458,10 +461,14 @@ function playNote(noteObj, time) {
   if (!isFinite(freq) || freq <= 0) return;
   const osc = audioCtx.createOscillator();
   const gain = audioCtx.createGain();
-  osc.type = 'square';
+
+  // Use triangle wave for whimsical tone
+  osc.type = document.getElementById('waveformToggle')?.value || 'triangle';
   osc.frequency.setValueAtTime(freq, time);
-  gain.gain.setValueAtTime(0.2, time);
-  gain.gain.exponentialRampToValueAtTime(0.001, time + 0.3);
+
+  gain.gain.setValueAtTime(0.25, time);
+  gain.gain.exponentialRampToValueAtTime(0.001, time + 0.2);
+
   osc.connect(gain).connect(audioCtx.destination);
   osc.start(time);
   osc.stop(time + 0.3);
@@ -469,21 +476,28 @@ function playNote(noteObj, time) {
 
 function playChiptune() {
   const raw = document.getElementById('chiptuneInput').value;
-  chiptuneNotes = parseChiptuneInput(raw);
+  originalChiptuneNotes = parseChiptuneInput(raw);
+  chiptuneNotes = originalChiptuneNotes.slice();
   chiptuneIndex = 0;
   isChiptunePlaying = true;
-  let nextTime = audioCtx.currentTime;
-  const beatTime = 60 / tempo;
+  nextChiptuneTime = audioCtx.currentTime;
+  beatTime = 60 / tempo;
 
   function schedule() {
-    while (chiptuneIndex < chiptuneNotes.length && nextTime < audioCtx.currentTime + 0.1) {
+    while (chiptuneIndex < chiptuneNotes.length && nextChiptuneTime < audioCtx.currentTime + 0.1) {
       const note = chiptuneNotes[chiptuneIndex];
-      playNote(note, nextTime);
-      nextTime += beatTime * (note.duration / 4);
+      playNote(note, nextChiptuneTime);
+      nextChiptuneTime += beatTime * (note.duration / 4);
       chiptuneIndex++;
     }
-    if (chiptuneIndex < chiptuneNotes.length && isChiptunePlaying) {
-      chiptuneScheduler = requestAnimationFrame(schedule);
+    if (isChiptunePlaying) {
+      if (chiptuneIndex < chiptuneNotes.length) {
+        chiptuneScheduler = requestAnimationFrame(schedule);
+      } else if (document.getElementById('loopChiptune')?.checked) {
+        chiptuneNotes = chiptuneNotes.concat(originalChiptuneNotes);
+        chiptuneScheduler = requestAnimationFrame(schedule);
+
+      }
     }
   }
   schedule();
@@ -492,6 +506,35 @@ function playChiptune() {
 function stopChiptune() {
   isChiptunePlaying = false;
   cancelAnimationFrame(chiptuneScheduler);
+} 
+
+function queueChiptune(melodyString, bpm = tempo, loop = true) {
+  stopChiptune();
+  originalChiptuneNotes = parseChiptuneInput(melodyString);
+  chiptuneNotes = originalChiptuneNotes.slice();
+  chiptuneIndex = 0;
+  isChiptunePlaying = true;
+  nextChiptuneTime = audioCtx.currentTime;
+  beatTime = 60 / bpm;
+
+  function schedule() {
+    while (chiptuneIndex < chiptuneNotes.length && nextChiptuneTime < audioCtx.currentTime + 0.1) {
+      const note = chiptuneNotes[chiptuneIndex];
+      playNote(note, nextChiptuneTime);
+      nextChiptuneTime += beatTime * (note.duration / 4);
+      chiptuneIndex++;
+    }
+    if (isChiptunePlaying) {
+      if (chiptuneIndex < chiptuneNotes.length) {
+        chiptuneScheduler = requestAnimationFrame(schedule);
+      } else if (loop) {
+        chiptuneNotes = chiptuneNotes.concat(originalChiptuneNotes);
+        chiptuneScheduler = requestAnimationFrame(schedule);
+      }
+    }
+  }
+
+  schedule();
 }
 
     
