--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -79,6 +79,7 @@ let landingFrame = 0;
 const JUMP_HEIGHT = 114;
 let jumpFrame = 0;
 let jumpLandOffset = 0;
+
     const bunnyTheme_0 = `
 C5:4 R:2 D5:4 E5:4 R:2
 G5:8 F5:4 E5:2 D5:2 R:4
@@ -97,6 +98,12 @@ E6:4 R:2 G5:2 A5:2 B5:2 C6:4
 R:2 G5:2 A5:2 F5:2 D5:2 R:4
 C6:2 E6:2 D6:4 R:2 G5:2 C6:4
 `;
+
+	const bunnyTheme_3 = `
+	C6:2 B5:2 A5:2 G5:2 F5:2 E5:2 D5:2 C5:2
+C5:4 R:2 C4:2 G4:4 R:4
+`;
+
 let jumpDuration = 20; // default, will get recalculated
 const bunnyPlayer = createQueuedChiptunePlayer();
 
@@ -449,11 +456,12 @@ if (scrollSinceLastSpawn >= SPAWN_EVERY_PX && !gameOver && !gamePaused && !autoP
           obs.y < playerY + playerSize &&
           obs.x === lanes[playerLane]) {
           gameOver = true;
+		  bunnyPlayer.interruptAndPlay(bunnyTheme_3, 120);
           document.getElementById("gameOverOverlay").style.display = "flex";
           document.getElementById("finalScore").textContent = score;
+
           return;
-          speedSlider.value = lastSpeed;
-          document.getElementById("speedValue").textContent = lastSpeed;
+
         }
       }
 
