--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -565,8 +565,8 @@ if (scrollSinceLastSpawn >= SPAWN_EVERY_PX && !gameOver && !gamePaused && !autoP
       if (scorePulseFrame > 0) scorePulseFrame--;
 	  
       scorePops.forEach((pop, i) => {
-  ctx.globalAlpha = pop.alpha;
-  ctx.fillStyle = pop.color || "black";
+ctx.globalAlpha = 1; // no transparency
+ctx.fillStyle = (pop.text === "-1") ? "red" : "black"; // strong red for -1, black otherwise
 
   // Use fixed font size for final letter (no pulse)
   const fontSize = pop.isFinalLetter ? 16 : 16;
