--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -126,7 +126,7 @@ C5:4 R:2 C4:2 G4:4 R:4
 `;
 
 let jumpDuration = 20; // default, will get recalculated
-const bunnyPlayer = createQueuedChiptunePlayer();
+let bunnyPlayer;
 
     const commonWords = [
   "THE", "AND", "YOU", "FOR", "ARE", "WITH", "THIS", "HAVE", "FROM", "ONE",
@@ -879,6 +879,11 @@ function schedule() {
     autoPlayMode = false;
     document.getElementById("instructionOverlay").style.display = "none";
     gamePaused = false;
+	// ✅ Create the audio player only after user interaction
+  if (!bunnyPlayer) {
+    bunnyPlayer = createQueuedChiptunePlayer();
+  }
+	
     // Resume audio context if needed (iOS Safari fix)
 if (bunnyPlayer.audioCtx.state === "suspended") {
   bunnyPlayer.audioCtx.resume().then(() => {
