--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -35,7 +35,7 @@
 </div>
 
   <script>
-  const showTrees = false;
+  const showTrees = true;
   const BASE_JUMP_DURATION = 26; // Tweak this for feel
   const canvas = document.getElementById("gameCanvas");
   const ctx = canvas.getContext("2d");
@@ -497,19 +497,22 @@ if (scrollSinceLastSpawn >= SPAWN_EVERY_PX && !gameOver && !gamePaused && !autoP
 
       ctx.fillStyle = '#88b37f';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-if (showTrees) {
-      for (let y = Math.floor(bgY % 100) - 100; y < canvas.height; y += 100) {
-  ctx.fillStyle = '#5a3e1b';
-  [ leftTreeX, rightTreeX ].forEach(x => {
-    ctx.fillRect(x, y + 40, 10, 40);
+	if (showTrees) {
+		for (let y = Math.floor(bgY % 100) - 100; y < canvas.height; y += 100) {
+			const snappedY = Math.round(y); // snap to pixel
 
-    ctx.beginPath();
-    ctx.fillStyle = '#2f6b2f';
-    ctx.arc(x + 5, y + 30, 20, 0, Math.PI * 2);
-    ctx.fill();
-  });
-}
-}
+			ctx.fillStyle = '#5a3e1b';
+			[leftTreeX, rightTreeX].forEach(x => {
+			  ctx.fillStyle = '#5a3e1b';
+			  ctx.fillRect(x, snappedY + 40, 10, 40); // trunk
+
+			  ctx.beginPath();
+			  ctx.fillStyle = '#2f6b2f';
+			  ctx.arc(x + 5, snappedY + 30, 20, 0, Math.PI * 2); // canopy
+			  ctx.fill();
+			});
+		}
+	}
 
       if (autoPlayMode && Math.random() < 0.02 && !isJumping) {
         isJumping = true;
@@ -889,7 +892,9 @@ function schedule() {
 </script>
 <div id="gameOverOverlay" style="display:none;position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);color:white;font-family:Garamond,serif;z-index:25;align-items:center;justify-content:center;flex-direction:column;text-align:center;">
   <h2>Game Over</h2>
-  <p>Your final score: <span id="finalScore">0</span></p>
+  <p style="font-size: 24px;">
+  Your final score: <span id="finalScore">0</span> 🥕
+  </p>
   <button onclick="location.reload()" style="padding:10px 20px; font-size:18px; cursor:pointer;">Play Again</button>
 </div>
 <div id="instructionOverlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); color: white; font-family: Garamond, serif; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 20; text-align: center; padding: 20px;">
