--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -890,6 +890,7 @@ function schedule() {
 
     
 </script>
+
 <div id="gameOverOverlay" style="display:none;position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);color:white;font-family:Garamond,serif;z-index:25;align-items:center;justify-content:center;flex-direction:column;text-align:center;">
   <h2>Game Over</h2>
   <p style="font-size: 24px;">
@@ -898,6 +899,8 @@ function schedule() {
   <button onclick="location.reload()" style="padding:10px 20px; font-size:18px; cursor:pointer;">Play Again</button>
 </div>
 <div id="instructionOverlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); color: white; font-family: Garamond, serif; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 20; text-align: center; padding: 20px;">
+  <img src="bunny_splash.png" alt="Bunny Logo"
+     style="width: 80%; max-width: 500px; height: auto; margin-bottom: 20px;" />
   <h1 style="color: #fff1e6; font-size: 36px; margin-bottom: 20px;">Spellbound <span style="color: #88b37f;">Bunny</span></h1>
   <h2>How to Play</h2>
   <p>Swipe left or right to move.<br>Swipe up to jump over traps and collect the right letters.</p>
