--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -72,7 +72,8 @@ function resizeCanvas() {
 
     // Update game logic dimensions based on window size (NOT canvas.height)
     playerY = displayHeight * 0.8;
-    JUMP_HEIGHT = displayHeight * 0.13;
+    // 🔽 Cap the max jump height to 120px regardless of display height
+    JUMP_HEIGHT = Math.min(displayHeight * 0.13, 120); 
     playerSize = displayHeight * 0.07;
     SPAWN_EVERY_PX = Math.max(100, displayHeight * 0.4);
 
