--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -37,7 +37,7 @@
 </div>
 
   <script>
-  const GAME_VERSION = "v1.0.4"; // 🔁 Update this as needed
+  const GAME_VERSION = "v1.0.5"; // 🔁 Update this as needed
   const showTrees = true;
   const BASE_JUMP_DURATION = 26; // Tweak this for feel
   const canvas = document.getElementById("gameCanvas");
@@ -280,7 +280,9 @@ canvas.addEventListener("touchend", (e) => {
   } else if (diffY > 50 && !isJumping) {
     // Only jump if swipe is clearly vertical and strong
     isJumping = true;
-    jumpDuration = Math.floor(BASE_JUMP_DURATION * (canvas.height / 800) * (BASE_SPEED / currentSpeed));
+    const screenFactor = Math.min(canvas.height / 800, 1.5); // cap exaggeration
+	jumpDuration = Math.floor(BASE_JUMP_DURATION * screenFactor * (BASE_SPEED / currentSpeed));
+
     jumpFrame = jumpDuration;
   }
 
